<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".screens.SplashScreen">

    <RelativeLayout
        android:id="@+id/contentLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="25dp"
        android:visibility="visible">

        <RelativeLayout
            android:id="@+id/topContentLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_appName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/app_name"
                android:textColor="@color/appName_textView"
                android:textSize="45sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_tagLine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_appName"
                android:layout_centerHorizontal="true"
                android:text="@string/app_tagLine"
                android:textColor="@color/appTagLine_textView"
                android:textSize="25sp"
                android:textStyle="italic" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/middleContentLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:layout_above="@+id/bottomContentLayout"
            android:layout_below="@+id/topContentLayout"
            android:gravity="center">

            <com.facebook.login.widget.LoginButton
                android:id="@+id/btn_fbLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:onClick="fbLoginClick"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                facebook:com_facebook_login_text="@string/facebookLoginText" />

            <com.google.android.gms.common.SignInButton
                android:id="@+id/btn_gSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_fbLogin"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/googleLoginText" />

            <TextView
                android:id="@+id/txt_forgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_centerHorizontal="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/btn_gSignIn"
                android:padding="5dp"
                android:text="@string/lbl_forgotPassword"
                android:textStyle="italic"
                android:textColor="@color/signUpLabel_textView"
                android:textSize="16sp" />

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/bottomContentLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <Button
                android:id="@+id/btn_login"
                style="@style/AppButtonTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@drawable/white_border_button"
                android:onClick="loginClick"
                android:text="@string/app_login" />


            <TextView
                android:id="@+id/txt_signUpLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_login"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:text="@string/signUp_label"
                android:textColor="@color/signUpLabel_textView"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_signUp"
                style="@style/AppButtonTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_signUpLabel"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:background="@drawable/white_border_button"
                android:onClick="signUpClick"
                android:text="@string/app_signUp" />
        </RelativeLayout>

    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>